# LimitBook_rust

./: .dockerignore  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  Dockerfile.gateway  README.md  SECURITY.md  docker-compose.yml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
engine-core/: Cargo.toml
engine-core/benches/: matching.rs
engine-core/examples/: latency.rs
engine-core/src/: book.rs  engine.rs  lib.rs  matcher.rs  runtime.rs
engine-core/src/domain/: error.rs  event.rs  ids.rs  mod.rs  order.rs  trade.rs
engine-core/tests/: matching.rs  properties.rs
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: DepthChart.tsx  DepthSculpture.tsx  Masthead.tsx  MetricsPanel.tsx  Odometer.tsx  OrderBook.tsx  OrderEntry.tsx  SimControls.tsx  TradeTape.tsx
frontend/src/hooks/: useEngineFeed.ts
frontend/src/lib/: api.ts  feed.ts  format.ts  sim.ts
gateway/: Cargo.toml
gateway/src/: dto.rs  lib.rs  main.rs  metrics.rs  routes.rs  sim.rs  state.rs  ws.rs
gateway/tests/: api.rs
