[package]
name = "engine-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Pure-Rust price-time-priority order-matching engine (no async, no I/O, no hot-path alloc)"

[lib]
name = "engine_core"
path = "src/lib.rs"

[features]
# Off by default — the core matcher stays std-only. The gateway enables this to serialize
# engine value types onto the wire.
default = []
serde = ["dep:serde"]

[dependencies]
slab.workspace = true
serde = { workspace = true, optional = true }

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true

# Benchmark target is added in milestone M5 (benches/matching.rs).
