[package]
name = "gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Axum + tokio gateway wrapping the LimitBook matching engine (REST + WebSocket + metrics)"

[lib]
name = "gateway"
path = "src/lib.rs"

[[bin]]
name = "gateway"
path = "src/main.rs"

[dependencies]
engine-core = { path = "../engine-core", features = ["serde"] }

axum.workspace = true
tokio.workspace = true
tower-http.workspace = true
crossbeam-channel.workspace = true
serde.workspace = true
serde_json.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rand.workspace = true

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
